--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <div class="page-main__background container">
+      <div class="page-main__background">
         <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
       <section class="contest">
@@ -114,8 +114,8 @@
               </ul>
             </div>
             <div class="form__block form-achievements container">
-              <fieldset class="form__fieldset">
-                <legend class="form__title">Ваши безбашенные достижения в путешествии</legend>
+              <fieldset class="form__fieldset form-achievements__fieldset">
+                <legend class="form__title form-achievements__title">Ваши безбашенные достижения в путешествии</legend>
                 <ul class="form-achievements__list">
                   <li class="form-achievements__item">
                     <label class="form-achievements__text">
@@ -163,8 +163,8 @@
               </fieldset>
             </div>
             <div class="form__block form-contactInfo container">
-              <fieldset class="form__fieldset">
-                <legend class="form__title form__title--none">Контактная информация</legend>
+              <fieldset class="form__fieldset form-contactInfo__fieldset">
+                <legend class="form__title form-contactInfo__title">Контактная информация</legend>
                 <ul class="form-contactInfo__name-list">
                   <li class="form-contactInfo__item">
                     <label class="form-contactInfo__label form-contactInfo__icon-phone">
@@ -223,7 +223,7 @@
           <div class="form__bottom container">
             <button class="form__button" type="submit">Отправить форму</button>
             <small class="form__small">
-              <span class="form__star">*</span> - обязательные поля
+              <span class="form__star">*</span> - обязательные <span class="form__small form__small--lead">для заполнения</span> поля
             </small>
           </div>
         </form>
