--- a/source/index.html
+++ b/source/index.html
@@ -119,7 +119,8 @@
             Устали от серости мегаполиса?
           </p>
           <p class="advantages__text">
-            Нам есть, что вам предложить!
+            Нам есть, что вам<br class="advantages__break">
+            предложить!
           </p>
         </div>
         <div class="advantages__wrapper">
@@ -137,7 +138,8 @@
                 <img src="img/iphone-screen-2-desktop@1x.png" height="302px" width="300px">
                 <h2 class="advantages__title">Меняет мир вокруг</h2>
                 <p class="advantages__text advantages__text--information">
-                  Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
+                  Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br class="advantages__break">
+                  усилить эффект
                 </p>
               </li>
               <li class="advantages__item">
@@ -155,7 +157,8 @@
           <div class="effect__block container">
             <img class="effect__svg" src="img/icon-timer.svg">
             <div class="effect__chunk">
-              <h2 class="effect__title">Эффект на 24 часа!</h2>
+              <h2 class="effect__title">Эффект<br class="effect__break">
+                на 24 часа!</h2>
               <p class="effect__text">
                 Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
               </p>
