--- a/source/index.html
+++ b/source/index.html
@@ -343,6 +343,9 @@
           </ul>
         </div>
         <div class="map">
+          <svg width="320" height="123" viewBox="0 0 320 123" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M159 123L-441 0H759L159 123Z" fill="white"/>
+          </svg>
           <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651568!2d30.320894616062876!3d59.938794181876276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1593431932958!5m2!1sru!2sru" width="320px" height="200px" allowfullscreen="" aria-hidden="false">
           </iframe>
         </div>
