--- a/source/index.html
+++ b/source/index.html
@@ -126,7 +126,6 @@
         </div>
         <div class="advantages__wrapper">
           <div class="advantages__container container">
-            <img src="img/iphone-screen-3-tablet@1x.png" width="268px" height="471px" class="advantages__image advantages__image--medium">
             <ul class="advantages__list">
               <li class="advantages__item">
                 <img src="img/iphone-screen-1-desktop@1x.png" height="302px" width="300px">
@@ -152,7 +151,6 @@
                 </p>
               </li>
             </ul>
-            <img src="img/iphone-screen-mobile@1x.png" width="157px" height="320px" class="advantages__image">
           </div>
         </div>
         <section class="effect">
@@ -165,7 +163,11 @@
                 на 24 часа!
               </h2>
               <p class="effect__text">
-                Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
+                Британские ученые провели исследования и доказали,
+                <br>
+                что положительный эффект
+                <br>
+                от использования приложения длится целые сутки!
               </p>
               <a href="" class="effect__link">
                 Узнать больше об исследовании
