Секция со слайдером

--- a/source/index.html
+++ b/source/index.html
@@ -243,25 +243,25 @@
       <section class="rate">
         <div class="rate__wrapper container">
           <table class="rate__table">
-            <thead class="rate__head">
+            <thead class="rate__header">
               <tr>
-                <th>
+                <th class="rate__title">
                 </th>
                 <th class="rate__title">
                   База
-                  <p class="rate__title rate__title--price">
+                  <p class="rate__text">
                     1,99 USD
                   </p>
                 </th>
                 <th class="rate__title">
                   Стандарт
-                  <p class="rate__title rate__title--price">
+                  <p class="rate__text">
                     3,99 USD
                   </p>
                 </th>
                 <th class="rate__title">
                   Анлим
-                  <p class="rate__title rate__title--price">
+                  <p class="rate__text">
                     9,99 USD
                   </p>
                 </th>
