Телефоны и карта + ретина частично

--- a/source/index.html
+++ b/source/index.html
@@ -128,14 +128,14 @@
           <div class="advantages__container container">
             <ul class="advantages__list">
               <li class="advantages__item">
-                <img src="img/iphone-screen-1-desktop@1x.png" height="302px" width="300px">
+                <img src="img/iphone-screen-1-desktop@1x.png" srcset="img/iphone-screen-1-desktop@2x.png 2x" alt="Экран телефона">
                 <h2 class="advantages__title">Поднимает настроение</h2>
                 <p class="advantages__text advantages__text--information">
                   Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
                 </p>
               </li>
               <li class="advantages__item">
-                <img src="img/iphone-screen-2-desktop@1x.png" height="302px" width="300px">
+                <img src="img/iphone-screen-2-desktop@1x.png" srcset="img/iphone-screen-2-desktop@2x.png 2x" alt="Экран телефона">
                 <h2 class="advantages__title">Меняет мир вокруг</h2>
                 <p class="advantages__text advantages__text--information">
                   Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
@@ -144,7 +144,7 @@
                 </p>
               </li>
               <li class="advantages__item">
-                <img src="img/iphone-screen-3-desktop@1x.png" height="302px" width="300px">
+                <img src="img/iphone-screen-3-desktop@1x.png" srcset="img/iphone-screen-3-desktop@2x.png 2x" alt="Экран телефона">
                 <h2 class="advantages__title">Заводит новых друзей</h2>
                 <p class="advantages__text advantages__text--information">
                   Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
