--- a/source/photo.html
+++ b/source/photo.html
@@ -105,9 +105,9 @@
         <div class="gallery__grid container">
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-car-desktop@1x.jpg" media="(min-width: 1200px)">
-              <source srcset="img/photo-car-tablet@1x.jpg" media="(min-width: 660px)">
-              <img src="img/photo-car-mobile@1x.jpg">
+              <source srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" alt="Фотография пользователя">
             </picture>
             <div class="gallery__block">
               <b class="gallery__user">Левон</b>
@@ -120,9 +120,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-drumset-desktop@1x.jpg" media="(min-width: 1200px)">
-              <source srcset="img/photo-drumset-tablet@1x.jpg" media="(min-width: 660px)">
-              <img src="img/photo-drumset-mobile@1x.jpg">
+              <source srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" alt="Фотография пользователя">
             </picture>
             <div class="gallery__block">
               <b class="gallery__user">Антон</b>
@@ -135,9 +135,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-window-desktop@1x.jpg" media="(min-width: 1200px)">
-              <source srcset="img/photo-window-tablet@1x.jpg" media="(min-width: 660px)">
-              <img src="img/photo-window-mobile@1x.jpg">
+              <source srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" alt="Фотография пользователя">
             </picture>
             <div class="gallery__block">
               <b class="gallery__user">Борис</b>
@@ -150,9 +150,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-fair-desktop@1x.jpg" media="(min-width: 1200px)">
-              <source srcset="img/photo-fair-tablet@1x.jpg" media="(min-width: 660px)">
-              <img src="img/photo-fair-mobile@1x.jpg">
+              <source srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" alt="Фотография пользователя">
             </picture>
             <div class="gallery__block">
               <b class="gallery__user">Сергей</b>
@@ -165,9 +165,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-pov-desktop@1x.jpg" media="(min-width: 1200px)">
-              <source srcset="img/photo-pov-tablet@1x.jpg" media="(min-width: 660px)">
-              <img src="img/photo-pov-mobile@1x.jpg">
+              <source srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" alt="Фотография пользователя">
             </picture>
             <div class="gallery__block">
               <b class="gallery__user">Максим</b>
@@ -180,9 +180,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-wing-desktop@1x.jpg" media="(min-width: 1200px)">
-              <source srcset="img/photo-wing-tablet@1x.jpg" media="(min-width: 660px)">
-              <img src="img/photo-wing-mobile@1x.jpg">
+              <source srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" alt="Фотография пользователя">
             </picture>
             <div class="gallery__block">
               <b class="gallery__user">Надежда</b>
@@ -202,9 +202,9 @@
       <section class="send">
         <form action="https://echo.htmlacademy.ru/courses" method="post">
           <picture>
-            <source srcset="img/photo-road-desktop@1x.jpg" media="(min-width: 1200px)">
-            <source srcset="img/photo-road-tablet@1x.jpg" media="(min-width: 660px)">
-            <img class="send__image" src="img/photo-road-mobile@1x.jpg">
+            <source srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+            <source srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x" media="(min-width: 660px)">
+            <img class="send__image" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Фотография пользователя">
           </picture>
           <ul class="send__list">
             <li class="send__item">
