--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <div class="page-main__background">
+      <div class="page-main__background page-main__background--height">
         <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
       <section class="contest">
