--- a/source/index.html
+++ b/source/index.html
@@ -269,45 +269,81 @@
             </thead>
             <tbody>
               <tr>
-                <td>
+                <td class="rate__cell">
                   <p class="rate__option">Розовый фильтр</p>
                 </td>
-                <td>
-                  <span>Да</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--true">
+                      <span class="visually-hidden">Да</span>
+                    </span>
+                  </div>
                 </td>
-                <td>
-                  <span>Да</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--true">
+                      <span class="visually-hidden">Да</span>
+                    </span>
+                  </div>
                 </td>
-                <td>
-                  <span>Да</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--true">
+                      <span class="visually-hidden">Да</span>
+                    </span>
+                  </div>
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="rate__cell">
                   <p class="rate__option">Смайлики</p>
                 </td>
-                <td>
-                  <span>Нет</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--false">
+                      <span class="visually-hidden">Нет</span>
+                    </span>
+                  </div>
                 </td>
-                <td>
-                  <span>Да</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--true">
+                      <span class="visually-hidden">Да</span>
+                    </span>
+                  </div>
                 </td>
-                <td>
-                  <span>Да</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--true">
+                      <span class="visually-hidden">Да</span>
+                    </span>
+                  </div>
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="rate__cell">
                   <p class="rate__option">Комментарии</p>
                 </td>
-                <td>
-                  <span>Нет</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--false">
+                      <span class="visually-hidden">Нет</span>
+                    </span>
+                  </div>
                 </td>
-                <td>
-                  <span>Нет</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--false">
+                      <span class="visually-hidden">Нет</span>
+                    </span>
+                  </div>
                 </td>
-                <td>
-                  <span>Да</span>
+                <td class="rate__cell">
+                  <div class="rate__feature">
+                    <span class="rate__feature-value rate__feature-value--true">
+                      <span class="visually-hidden">Да</span>
+                    </span>
+                  </div>
                 </td>
               </tr>
             </tbody>
