--- a/source/photo.html
+++ b/source/photo.html
@@ -208,7 +208,7 @@
             <source srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x" media="(min-width: 660px)">
             <img class="send__image" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Фотография пользователя">
           </picture>
-          <div>
+          <div class="send__block">
             <ul class="send__list">
               <li class="send__item send__item--active">
                 <label class="send__label">
@@ -250,7 +250,7 @@
             </ul>
             <div class="send__buttons">
               <button class="send__button" type="submit">Запостить</button>
-              <button class="send__button" type="button">Отмена</button>
+              <button class="send__button" type="reset">Отмена</button>
             </div>
           </div>
         </form>
