--- a/source/index.html
+++ b/source/index.html
@@ -253,7 +253,7 @@
                     1,99 USD
                   </p>
                 </th>
-                <th class="rate__title">
+                <th class="rate__title rate__title--hit">
                   Стандарт
                   <p class="rate__text">
                     3,99 USD
