--- a/source/form.html
+++ b/source/form.html
@@ -301,6 +301,42 @@
         </div>
       </div>
     </footer>
+    <div class="modal modal--required">
+      <div class="modal__block container">
+        <p class="modal__title">
+          Что-то пошло
+          <br>
+          не так!
+        </p>
+        <p class="modal__text">
+          Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+        </p>
+      </div>
+      <div class="modal__background">
+        <button class="modal__button">
+          Ок
+        </button>
+      </div>
+    </div>
+    <div class="modal modal--send">
+      <div class="modal__block container">
+        <p class="modal__title">
+          Ваша заявка
+          <br>
+          отправлена
+        </p>
+        <p class="modal__text">
+          Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и
+          <br>
+          оповестим вас.
+        </p>
+      </div>
+      <div class="modal__background">
+        <button class="modal__button">
+          Закрыть окно
+        </button>
+      </div>
+    </div>
     <script src="js/menu.js"></script>
   </body>
 </html>
