--- a/source/form.html
+++ b/source/form.html
@@ -92,7 +92,7 @@
                     <span class="form-mainInfo__caption">
                       Фамилия:
                     </span>
-                    <input class="form__input" type="text" name="surname" placeholder="Укажите фамилию *">
+                    <input class="form__input" type="text" name="surname" placeholder="Укажите фамилию *" required>
                   </label>
                 </li>
                 <li>
@@ -100,7 +100,7 @@
                     <span class="form-mainInfo__caption">
                       Имя:
                     </span>
-                    <input class="form__input" type="text" name="name" placeholder="Введите ваше имя *">
+                    <input class="form__input" type="text" name="name" placeholder="Введите ваше имя *" required>
                   </label>
                 </li>
                 <li>
@@ -179,7 +179,7 @@
                       <span class="form-contactInfo__caption">
                         Адрес почты
                       </span>
-                      <input class="form__input" type="email" name="email" placeholder="Введите почту *">
+                      <input class="form__input" type="email" name="email" placeholder="Введите почту *" required>
                     </label>
                   </li>
                 </ul>
