--- a/source/index.html
+++ b/source/index.html
@@ -273,7 +273,7 @@
                   <p class="rate__option">Розовый фильтр</p>
                 </td>
                 <td class="rate__cell">
-                  <div class="rate__feature">
+                  <div class="rate__feature" data-name="Розовый фильтр">
                     <span class="rate__feature-value rate__feature-value--true">
                       <span class="visually-hidden">Да</span>
                     </span>
@@ -351,12 +351,12 @@
         </div>
         <ul class="rate__toggle-list">
           <li>
-            <button class="rate__toggle rate__toggle--current" type="button">
+            <button class="rate__toggle" type="button">
               <span class="visually-hidden">Кнопка 1</span>
             </button>
           </li>
           <li>
-            <button class="rate__toggle" type="button">
+            <button class="rate__toggle rate__toggle--current" type="button">
               <span class="visually-hidden">Кнопка 2</span>
             </button>
           </li>
