--- a/source/photo.html
+++ b/source/photo.html
@@ -210,7 +210,7 @@
           </picture>
           <div class="send__block">
             <ul class="send__list">
-              <li class="send__item send__item--active">
+              <li class="send__item send__item--crop send__item--active">
                 <label class="send__label">
                   <input class="send__input" type="checkbox" name="crop" checked>
                   <svg class="send__svg send__svg--crop" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
@@ -222,10 +222,10 @@
                   <div class="send__toggle"></div>
                 </div>
               </li>
-              <li class="send__item">
+              <li class="send__item send__item--fill">
                 <label class="send__label">
                   <input class="send__input" type="checkbox" name="fill">
-                  <svg class="send__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                  <svg class="send__svg send__svg--fill" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
                     <path fill="none" d="M0,0h48v48H0V0z"/>
                     <path class="send__path" fill="#283645" d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"/>
                     <rect class="send__path" y="40" width="48" height="3"/>
@@ -235,7 +235,7 @@
                   <div class="send__toggle"></div>
                 </div>
               </li>
-              <li class="send__item">
+              <li class="send__item send__item--contrast">
                 <label class="send__label">
                   <input class="send__input" type="checkbox" name="contrast">
                   <svg class="send__svg send__svg--contrast" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
